Fix pin svg size/button text alignment

--- a/python/ecep/portal/static/scss/_index.scss
+++ b/python/ecep/portal/static/scss/_index.scss
@@ -51,6 +51,16 @@
       }
     }
 
+    #pin {
+      height: 1em;
+      width: 1em;
+
+      svg {
+        height: 1em;
+        width: 1em;
+      }
+    }
+
     .index-form {
       padding-top: 1rem;
     }
